# ethprimLib

./: Anchor.toml
programs/ethprim-lib/: Cargo.toml
programs/ethprim-lib/src/: lib.rs
tests/: ethprim-lib.ts
